449: Hero spacing issues (#450)
* 449: Add padding to following section rather than margin to hero section.

* 449: Changes to hero content spacing and fixing spacing for sibling article content having changed hero container margin.

* 449: Hero text container width adjusts with breakpoint.

---------

--- a/aemedge/templates/hub/hub.css
+++ b/aemedge/templates/hub/hub.css
@@ -98,8 +98,8 @@
 
   & > main {
     @media (width >= 980px) {
-      & .hero-container {
-        margin-block-end: 84px;
+      & .hero-container + .section {
+        padding-block-start: 84px;
       }
 
       & > :not(.hero-container, .title-banner-container) {
